# rust-weather-app

./: Cargo.toml  README.md  build.rs  favorites.json
src/: main.rs  weather_structs.rs
src/slint_files/: day_card.slint  error_toast.slint  favorite-card.slint  favorite_button.slint  favorites_panel.slint  hour_bar.slint  hour_forecast.slint  main_window.slint  my_button.slint  spacers.slint  weather_icon.slint  weather_panel.slint  weather_sections.slint
