[package]
name = "project"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.42"
reqwest = { version = "0.12.24", features = ["json"] }
serde = "1.0.228"
serde_json = "1.0.145"
slint = { version = "1.x", features = ["image-default-formats"] }
tokio = { version = "1.48.0", features = ["rt", "rt-multi-thread", "macros"] }
anyhow = "1.0"


[build-dependencies]
slint-build = "1.14.1"
